@@ -1,3 +1,8 @@
+2008-02-22 Borut Razem <borut.razem AT siol.net>
+
+	* emu/rrgb/main.c: fixed main.c:194: warning: pointer targets in passing
+	  argument 3 of 'accept' differ in signedness
+
 2008-02-21 Borut Razem <borut.razem AT siol.net>
 
 	* emu/rrgb/Makefile.in, Makefile.rules.in: added LDFLAGS
